--- a/ansible/roles/setup_extension_manager/tasks/main.yml
+++ b/ansible/roles/setup_extension_manager/tasks/main.yml
@@ -1,3 +1,7 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # tasks file for setup_extension_manager
+- name: Ensure extension manager is installed
+  ansible.builtin.apt:
+    name: gnome-shell-extension-manager
+    state: present
+  become: true
